--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "animal-avatars.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A client side javascript library to generate random avatars",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexanderbazo/animal-avatars"
+  },
   "main": "index.js",
-  "watch": {
-    "build": {
-      "patterns": [
-        "lib/**/*"
-      ],
-      "extensions": "js,css,html"
-    }
-  },
   "scripts": {
-    "build": "node build.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npm-watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alexander Bazo <alexanderbazo@googlemail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "npm-watch": "^0.6.0"
-  }
+  "author": "Regensburger Forscher <npm@regensburger-forscher.de>",
+  "license": "MIT"
 }
